--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -61,7 +61,7 @@
 		<servlet-name>chat</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	  <servlet>
+	 <!--  <servlet>
 	    <servlet-name>jcaptcha</servlet-name>
 	    <servlet-class>com.ivan.zhang.servlet.ImageCaptchaServlet</servlet-class>
 	    <load-on-startup>0</load-on-startup>
@@ -70,7 +70,7 @@
 	        <servlet-name>jcaptcha</servlet-name>  
 	        <url-pattern>/captcha.jpg</url-pattern>  
 	</servlet-mapping>
-
+ -->
 	<error-page>
 		<error-code>404</error-code>
 		<location>/404.html</location>
