--- a/src/main/resources/jdbc-app.properties
+++ b/src/main/resources/jdbc-app.properties
@@ -1,4 +1,4 @@
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://192.168.0.161:3306/danmu?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username=zplay
+jdbc.password=zplay_2015
