--- a/src/main/resources/jdbc-app.properties
+++ b/src/main/resources/jdbc-app.properties
@@ -1,10 +1,4 @@
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-
-#jdbc.url=jdbc:mysql://192.168.0.161:3306/danmu?useUnicode=true&amp;characterEncoding=utf-8
-#jdbc.username=zplay
-#jdbc.password=zplay_2015
-
-jdbc.url=jdbc:mysql://wfznjidescpf.rds.sae.sina.com.cn:10515/demo?useUnicode=true&amp;characterEncoding=utf-8
-jdbc.username=laozhang
-jdbc.password=laozhang123
+jdbc.url=jdbc:mysql://127.0.0.1:3306/readthis2?zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=root
 
